--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   http: ^1.4.0
   delightful_toast: ^1.1.0
   pin_code_fields: ^8.0.1
+  flutter_launcher_icons: ^0.14.4
+  lottie: ^3.3.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/images/appLogo.png"
 
 dev_dependencies:
   flutter_test:
