--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   flutter_advanced_segment: ^3.1.0
   intl: ^0.20.2
+  photo_view: ^0.15.0
 
 flutter_icons:
   android: true
