--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,11 @@ dependencies:
   delightful_toast: ^1.1.0
   pin_code_fields: ^8.0.1
   flutter_launcher_icons: ^0.14.4
+  shared_preferences: ^2.5.3
   lottie: ^3.3.1
   font_awesome_flutter: ^10.8.0
   flutter_svg: ^2.2.0
+  dropdown_search: ^6.0.2
   salomon_bottom_bar: ^3.3.2
   flutter_advanced_segment: ^3.1.0
   intl: ^0.20.2
