--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_svg: ^2.2.0
   dropdown_search: ^6.0.2
   salomon_bottom_bar: ^3.3.2
+  file_picker: ^10.2.0
+  http_parser: ^4.1.2
   flutter_advanced_segment: ^3.1.0
   intl: ^0.20.2
   photo_view: ^0.15.0
