--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_advanced_segment: ^3.1.0
   intl: ^0.20.2
   photo_view: ^0.15.0
+  shimmer: ^3.0.0
+  image_picker: ^1.1.2
 
 flutter_icons:
   android: true
