--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   photo_view: ^0.15.0
   shimmer: ^3.0.0
   image_picker: ^1.1.2
+  confetti: ^0.8.0
 
 flutter_icons:
   android: true
