made all car details screen changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   accordion: ^2.6.0
   flutter_layout_grid: ^2.0.8
   cached_network_image: ^3.4.1
+  video_player: ^2.10.0
 
 flutter_icons:
   android: true
