--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_layout_grid: ^2.0.8
   cached_network_image: ^3.4.1
   video_player: ^2.10.0
+  socket_io_client: ^3.1.2
 
 flutter_icons:
   android: true
