--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   cached_network_image: ^3.4.1
   video_player: ^2.10.0
   socket_io_client: ^3.1.2
+  connectivity_plus: ^6.1.5
+  internet_connection_checker: ^3.0.1
 
 flutter_icons:
   android: true
