--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   socket_io_client: ^3.1.2
   connectivity_plus: ^6.1.5
   internet_connection_checker: ^3.0.1
+  webview_flutter: ^4.13.0
 
 flutter_icons:
   android: true
