--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   connectivity_plus: ^6.1.5
   internet_connection_checker: ^3.0.1
   webview_flutter: ^4.13.0
+  url_launcher: ^6.3.2
+  scrollable_list_tab_scroller: ^3.1.1
 
 flutter_icons:
   android: true
