--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ dependencies:
   webview_flutter: ^4.13.0
   url_launcher: ^6.3.2
   scrollable_list_tab_scroller: ^3.1.1
+  firebase_core: ^4.1.0
+  firebase_messaging: ^16.0.1
+  onesignal_flutter: ^5.3.4
+  # flutter_local_notifications: ^19.2.0
+  # permission_handler: ^12.0.1
 
 flutter_icons:
   android: true
