--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -31,35 +31,35 @@ jobs:
           name: android-apk-${{ github.ref_name }}
           path: build/app/outputs/flutter-apk/app-release.apk
 
-  build-ios:
-    name: Build iOS IPA
-    runs-on: macos-latest
-    steps:
-      # Checkout code
-      - uses: actions/checkout@v4
+  # build-ios:
+  #   name: Build iOS IPA
+  #   runs-on: macos-latest
+  #   steps:
+  #     # Checkout code
+  #     - uses: actions/checkout@v4
 
-      # Setup Flutter
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.35.2"
+  #     # Setup Flutter
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: "3.35.2"
 
-      # Install dependencies
-      - run: flutter pub get
+  #     # Install dependencies
+  #     - run: flutter pub get
 
-      # Build iOS IPA (no signing)
-      - run: flutter build ios --release --no-codesign
+  #     # Build iOS IPA (no signing)
+  #     - run: flutter build ios --release --no-codesign
 
-      # Package IPA (Xcode required step)
-      - name: Export IPA
-        run: |
-          mkdir -p build/ios/ipa
-          xcodebuild -exportArchive \
-            -archivePath build/ios/archive/MyApp.xcarchive \
-            -exportPath build/ios/ipa \
-            -exportOptionsPlist ExportOptions.plist || true
+  #     # Package IPA (Xcode required step)
+  #     - name: Export IPA
+  #       run: |
+  #         mkdir -p build/ios/ipa
+  #         xcodebuild -exportArchive \
+  #           -archivePath build/ios/archive/MyApp.xcarchive \
+  #           -exportPath build/ios/ipa \
+  #           -exportOptionsPlist ExportOptions.plist || true
 
-      # Upload IPA artifact
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ios-ipa-${{ github.ref_name }}
-          path: build/ios/ipa
+  #     # Upload IPA artifact
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: ios-ipa-${{ github.ref_name }}
+  #         path: build/ios/ipa
