--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -22,14 +22,48 @@ jobs:
       # Install dependencies
       - run: flutter pub get
 
-      # Build APK
-      - run: flutter build apk --release
+      # # Build APK
+      # - run: flutter build apk --release
 
-      # Upload APK artifact
+      # # Upload APK artifact
+      # - uses: actions/upload-artifact@v4
+      #   with:
+      #     name: android-apk-${{ github.ref_name }}
+      #     path: build/app/outputs/flutter-apk/app-release.apk
+      # Decode keystore from secret
+      - name: Decode Keystore
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/upload-keystore.jks
+          cat > android/key.properties <<EOL
+          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword=${{ secrets.KEY_PASSWORD }}
+          keyAlias=${{ secrets.KEY_ALIAS }}
+          storeFile=upload-keystore.jks
+          EOL
+
+      # Build signed App Bundle
+      - run: flutter build appbundle --release
+
       - uses: actions/upload-artifact@v4
         with:
-          name: android-apk-${{ github.ref_name }}
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: android-aab-${{ github.ref_name }}
+          path: build/app/outputs/bundle/release/app-release.aab
+
+  deploy-android:
+    name: Deploy Android App to Play Store
+    needs: build-android
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_SERVICE_ACCOUNT }}
+          packageName: com.otobix.auctionapp
+          releaseFiles: build/app/outputs/bundle/release/app-release.aab
+          track: internal   # can be internal, alpha, beta, production
+          status: completed
+
 
   # build-ios:
   #   name: Build iOS IPA
