--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
   onesignal_flutter: ^5.3.4
+  change_app_package_name: ^1.5.0
   # flutter_local_notifications: ^19.2.0
   # permission_handler: ^12.0.1
 
