--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,26 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<!-- Permissions -->
-	<!-- Camera -->
-	<key>NSCameraUsageDescription</key>
-	<string>App requires access to the camera to take profile pictures of users.</string>
-
-	<!-- Photo Library -->
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>App requires access to your photo library to upload profile pictures of users.</string>
-
-	<!-- Notifications -->
-	<key>UIBackgroundModes</key>
-	<array>
-    <string>remote-notification</string>
-	</array>
-	<!-- <key>FirebaseAppDelegateProxyEnabled</key>
-	<true/> -->
-	<key>NSUserTrackingUsageDescription</key>
-	<string>App uses tracking to deliver personalized notifications.</string>
-	<!-- Permissions -->
-
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -44,6 +26,19 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>App requires access to the camera to take profile pictures of users.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App requires access to your photo library to upload profile pictures of users.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>App uses tracking to deliver personalized notifications.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -61,9 +56,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
