--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,128 +1,128 @@
-# # .github/workflows/build_ios.yml
+# .github/workflows/build_ios.yml
 
-# name: Deploy iOS App to App Store
+name: Deploy iOS App to App Store
 
-# on:
-#   push:
-#     branches:
-#       - main
-#       # - development
-#   workflow_dispatch:
+on:
+  push:
+    branches:
+      - main
+      # - development
+  workflow_dispatch:
 
-# env:
-#   APP_IDENTIFIER: com.otobix.auctionapp         # <-- your bundle id
-#   IOS_SCHEME: Runner                            # <-- your Xcode scheme (Flutter default)
-#   IOS_WORKSPACE: ios/Runner.xcworkspace         # Flutter uses workspace
-#   IOS_CONFIGURATION: Release
-#   APPLE_TEAM_ID: YOUR_TEAM_ID                   # <-- e.g. 1A2BC3D4EF (put real value)
-#   MATCH_GIT_URL: ${{ github.server_url }}/${{ github.repository }} # same repo
-#   MATCH_GIT_BRANCH: ios_signing
+env:
+  APP_IDENTIFIER: com.otobix.auctionapp         # <-- your bundle id
+  IOS_SCHEME: Runner                            # <-- your Xcode scheme (Flutter default)
+  IOS_WORKSPACE: ios/Runner.xcworkspace         # Flutter uses workspace
+  IOS_CONFIGURATION: Release
+  APPLE_TEAM_ID: 734JT7MU9R                   # <-- e.g. 1A2BC3D4EF (put real value)
+  MATCH_GIT_URL: ${{ github.server_url }}/${{ github.repository }} # same repo
+  MATCH_GIT_BRANCH: ios_signing
 
-# jobs:
-#   build-and-upload-ios:
-#     name: Build & Upload to TestFlight
-#     runs-on: macos-latest
-#     timeout-minutes: 60
+jobs:
+  build-and-upload-ios:
+    name: Build & Upload to TestFlight
+    runs-on: macos-latest
+    timeout-minutes: 60
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
-#         with:
-#           fetch-depth: 0  # match needs full history/branches
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # match needs full history/branches
 
-#       # Setup Ruby (for fastlane) with caching
-#       - name: Setup Ruby
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           ruby-version: '3.2'
-#           bundler-cache: true
+      # Setup Ruby (for fastlane) with caching
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2'
+          bundler-cache: true
 
-#       - name: Install Fastlane
-#         run: |
-#           gem install fastlane --no-document
+      - name: Install Fastlane
+        run: |
+          gem install fastlane --no-document
 
-#       # Setup Flutter
-#       - name: Setup Flutter
-#         uses: subosito/flutter-action@v2
-#         with:
-#           flutter-version: "3.35.2"
+      # Setup Flutter
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.35.2"
 
-#       - name: Flutter pub get
-#         run: flutter pub get
+      - name: Flutter pub get
+        run: flutter pub get
 
-#       # CocoaPods cache speeds up iOS builds
-#       - name: Cache CocoaPods
-#         uses: actions/cache@v4
-#         with:
-#           path: |
-#             ios/Pods
-#             ~/Library/Caches/CocoaPods
-#             ~/.cocoapods
-#           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-#           restore-keys: |
-#             ${{ runner.os }}-pods-
+      # CocoaPods cache speeds up iOS builds
+      - name: Cache CocoaPods
+        uses: actions/cache@v4
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
-#       - name: Install CocoaPods
-#         working-directory: ios
-#         run: pod install --repo-update
+      - name: Install CocoaPods
+        working-directory: ios
+        run: pod install --repo-update
 
-#       # Write App Store Connect API key file used by fastlane (pilot/deliver)
-#       - name: Create ASC API key file
-#         run: |
-#           echo '${{ secrets.ASC_API_KEY_JSON }}' > fastlane_api_key.json
+      # Write App Store Connect API key file used by fastlane (pilot/deliver)
+      - name: Create ASC API key file
+        run: |
+          echo '${{ secrets.ASC_API_KEY_JSON }}' > fastlane_api_key.json
 
-#       # Configure keychain for code signing (used by match to import certs/profiles)
-#       - name: Create CI keychain
-#         run: |
-#           security create-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
-#           security set-keychain-settings -lut 21600 build.keychain
-#           security unlock-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
-#           security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed 's/[",]//g')
-#           security default-keychain -s build.keychain
+      # Configure keychain for code signing (used by match to import certs/profiles)
+      - name: Create CI keychain
+        run: |
+          security create-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
+          security set-keychain-settings -lut 21600 build.keychain
+          security unlock-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
+          security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed 's/[",]//g')
+          security default-keychain -s build.keychain
 
-#       # Pull certs & provisioning profiles from the ios_signing branch via fastlane match
-#       - name: Fetch signing assets with match (appstore)
-#         env:
-#           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-#         run: |
-#           fastlane run match \
-#             type:appstore \
-#             app_identifier:$APP_IDENTIFIER \
-#             readonly:true \
-#             git_url:$MATCH_GIT_URL \
-#             git_branch:$MATCH_GIT_BRANCH \
-#             keychain_name:build.keychain \
-#             keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }}
+      # Pull certs & provisioning profiles from the ios_signing branch via fastlane match
+      - name: Fetch signing assets with match (appstore)
+        env:
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+        run: |
+          fastlane run match \
+            type:appstore \
+            app_identifier:$APP_IDENTIFIER \
+            readonly:true \
+            git_url:$MATCH_GIT_URL \
+            git_branch:$MATCH_GIT_BRANCH \
+            keychain_name:build.keychain \
+            keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }}
 
-#       # Build a signed IPA (Flutter -> Xcode)
-#       - name: Build signed IPA
-#         env:
-#           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
-#         run: |
-#           # Ensure Xcode uses correct team and signing style (project should already be set)
-#           # Build IPA with Flutter (codesigning handled by Xcode using matched profiles)
-#           flutter build ipa --release
+      # Build a signed IPA (Flutter -> Xcode)
+      - name: Build signed IPA
+        env:
+          APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
+        run: |
+          # Ensure Xcode uses correct team and signing style (project should already be set)
+          # Build IPA with Flutter (codesigning handled by Xcode using matched profiles)
+          flutter build ipa --release
 
-#       # Upload to TestFlight using fastlane pilot
-#       - name: Upload to TestFlight
-#         run: |
-#           IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
-#           echo "Uploading $IPA_PATH to TestFlight…"
-#           fastlane pilot upload \
-#             --api_key_path fastlane_api_key.json \
-#             --ipa "$IPA_PATH" \
-#             --skip_waiting_for_build_processing true \
-#             --distribute_external true \
-#             --uses_non_exempt_encryption false
+      # Upload to TestFlight using fastlane pilot
+      - name: Upload to TestFlight
+        run: |
+          IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
+          echo "Uploading $IPA_PATH to TestFlight…"
+          fastlane pilot upload \
+            --api_key_path fastlane_api_key.json \
+            --ipa "$IPA_PATH" \
+            --skip_waiting_for_build_processing true \
+            --distribute_external true \
+            --uses_non_exempt_encryption false
 
-#     #  When deploy for production then uncomment this and comment out above upload to testflight using fastlane pilot thing
-#       # - name: Upload to App Store (submit for review)
-#       #   run: |
-#       #     IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
-#       #     fastlane deliver \
-#       #       --api_key_path fastlane_api_key.json \
-#       #       --ipa "$IPA_PATH" \
-#       #       --submit_for_review true \
-#       #       --automatic_release true \
-#       #       --skip_screenshots true \
-#       #       --skip_metadata true
+    #  When deploy for production then uncomment this and comment out above upload to testflight using fastlane pilot thing
+      # - name: Upload to App Store (submit for review)
+      #   run: |
+      #     IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
+      #     fastlane deliver \
+      #       --api_key_path fastlane_api_key.json \
+      #       --ipa "$IPA_PATH" \
+      #       --submit_for_review true \
+      #       --automatic_release true \
+      #       --skip_screenshots true \
+      #       --skip_metadata true
