--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -89,7 +89,7 @@ jobs:
           fastlane run match \
             type:appstore \
             app_identifier:$APP_IDENTIFIER \
-            readonly:true \
+            readonly:false \
             git_url:$MATCH_GIT_URL \
             git_branch:$MATCH_GIT_BRANCH \
             keychain_name:build.keychain \
