--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,8 +7,8 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
+	<string>OtoBix Dealer App</string>
 	<!-- <string>Otobix Frontend</string> -->
-	<string>Otobix Dealer App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -16,7 +16,8 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>otobix_frontend</string>
+	<string>OtoBix Dealer App</string>
+	<!-- <string>otobix_frontend</string> -->
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
