--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -104,11 +104,11 @@ jobs:
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
-          APP_IDENTIFIER: ${{ env.APP_IDENTIFIER }}
           MATCH_GIT_URL: ${{ env.MATCH_GIT_URL }}
           MATCH_GIT_BRANCH: ${{ env.MATCH_GIT_BRANCH }}
           CI_KEYCHAIN_PASSWORD: ${{ secrets.CI_KEYCHAIN_PASSWORD }}
         run: |
+          export APP_IDENTIFIER=${{ env.APP_IDENTIFIER }}
           echo "Using APP_IDENTIFIER=$APP_IDENTIFIER"
           fastlane match appstore \
           app_identifier="$APP_IDENTIFIER" \
@@ -118,6 +118,7 @@ jobs:
           keychain_name:build.keychain \
           keychain_password="$CI_KEYCHAIN_PASSWORD" \
           api_key_path="$APP_STORE_CONNECT_API_KEY_PATH"
+
 
 
       # Build signed IPA using Flutter
