--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.24.3"  # or your version
+          flutter-version: "3.35.2" 
       - name: Install dependencies
         run: flutter pub get
       - name: Build iOS app
