--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -67,20 +67,11 @@ jobs:
           APP_STORE_ISSUER_ID: ${{ secrets.APP_STORE_ISSUER_ID }}
           APP_STORE_P8_KEY: ${{ secrets.APP_STORE_P8_KEY }}
         run: |
-          # Create API key file INSIDE ios/fastlane
-          mkdir -p ios/fastlane
-          cat > ios/fastlane/AuthKey_${APP_STORE_KEY_ID}.p8 <<'EOF'
-          ${APP_STORE_P8_KEY}
-          EOF
-          chmod 600 ios/fastlane/AuthKey_${APP_STORE_KEY_ID}.p8
-
-          # CocoaPods install (you already had this)
           cd ios
           pod install --repo-update
+          # Run fastlane directly (no bundle exec)
+          fastlane beta
 
-          # Run fastlane **from ios/**
-          # If no Gemfile, the second command runs
-          bundle exec fastlane beta || fastlane beta
 
 
 
